[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "MergeGI"
version= "0.2.0"
authors=["Sequana Team"]
description="Merge MGI fastq files"
license = "BSD-4-Clause"
readme="README.md"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix"
]
keywords = ["fastq", "MGI", "merger"]
packages = [
    { include = "mergegi" },
    { include = "sequana_pipelines/mergegi" },
]
include = [
    { path = "mergegi", format = ["sdist", "wheel"] },
    { path = "sequana_pipelines.mergegi", format = ["sdist", "wheel"] },
]

[tool.poetry.urls]
"Homepage" = "https://github.com/sequana/MergeGI"
"Bug Tracker" = "https://github.com/sequana/MergeGI/issues"

[tool.poetry.scripts]
mergegi = "mergegi:main"
mergegi_convert = "mergegi.cli:convert"
sequana_mergegi = { callable = "sequana_pipelines.mergegi.main:main", extras = ["sequana"] }

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.1.3"

# Deps needed for the sequana_pipelines
snakemake = { version = "^7.19.1", optional = true }
sequana_pipetools = { version = "^0.10.0", optional = true }

[tool.poetry.extras]
sequana = ["snakemake", "sequana_pipetools"]

[tool.poetry.group.dev.dependencies]
ipython = "^8.7.0"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.3"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
coveralls = "^3.3.1"
pytest-xdist = "^3.1.0"
snakefmt = "^0.8.0"

